# quantumFacts

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  examples.py  pyproject.toml  requirements.txt  setup.bat  setup.sh  setup_check.py
docs/: WORKFLOW.md  api_setup.md  colab_tts_setup.md
src/viral_shorts/: __init__.py  config.py  main.py
src/viral_shorts/content_sourcing/: __init__.py  fetchers.py  parsers.py
src/viral_shorts/narration/: __init__.py  tts.py  voice_manager.py
src/viral_shorts/publishing/: __init__.py  scheduler.py  youtube_publisher.py
src/viral_shorts/scripting/: __init__.py  prompts.py  script_generator.py
src/viral_shorts/utils/: __init__.py  logger.py  storage.py
src/viral_shorts/video_assembly/: __init__.py  assets.py  editor.py
tests/: test_content_sourcing.py  test_publishing.py
